--- a/Facebook Notifications/Info.plist
+++ b/Facebook Notifications/Info.plist
@@ -34,5 +34,16 @@
 	<true/>
 	<key>LSBackgroundOnly</key>
 	<true/>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>Facebook Notifications</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>facebook</string>
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
